/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

syntax = "proto3";
package metrics;

// Represents a single physical CPU
message Cpu {
  // The "branding name" of the CPU (i.e. AMD Ryzen 9 9800X3D 8-Core Processor)
  string brand_name = 1;
  // The percentage of CPU usage since the last snapshot (out of 100.0)
  double utilization = 2;
  // The peak per-core frequency in MHz
  uint32 frequency_mhz = 3;
  // The temperature in *millidegrees* Celsius (Maximum Tccd for AMD, maximum per-core temp for Intel)
  uint32 temperature_c = 4;
  // The per-core statistics
  repeated Core cores = 5;
}

// Snapshot of a single core
message Core {
  // The core's utilization
  double utilization = 1;
  // The frequency in MHz of the core
  uint32 frequency_mhz = 2;
}

// Represents system memory and swap space
message Memory {
  // The total amount of physical memory in bytes
  uint64 capacity = 1;
  // The amount of physical memory used
  uint64 in_use = 2;
  // The total amount of completely empty space on RAM
  uint64 free = 3;
  // The total amount of cached files in memory
  uint64 cached = 4;
  // The amount of free memory plus the amount of cache that is freeable
  uint64 available = 5;
  // The total amount of swap space
  uint64 swap_capacity = 6;
  // The amount of swap space used
  uint64 swap_in_use = 7;
  // The transfer speed of the memory
  uint64 speed = 8;
  // The form factor of the RAM
  string form_factor = 9;
  // The type of the RAM
  string ram_type = 10;
}

// Represents a single physical GPU
message Gpu {
  // The GPU's branding name (i.e. NVIDIA RTX 4090)
  string brand_name = 1;
  // The name and version of the kernel level driver
  string kernel_driver = 2;
  // The name and version of the userspace OpenGL driver
  string opengl_driver = 3;
  // The name and version of the userspace Vulkan driver
  string vulkan_driver = 4;

  // Utilization of the graphics engine
  double graphics_utilization = 5;
  // The clock of the graphics engine
  uint32 graphics_clock = 6;

  // The total amount of VRAM on the GPU
  uint64 memory_capacity = 7;
  // The amount of VRAM currently in use
  uint64 memory_usage = 8;
  // The clock of the VRAM
  uint32 memory_clock = 9;

  // NOTE ABOUT VIDEO ENCODE/DECODE:
  // AMD reports clock of encode and decode engines separately and utilization is merged
  // NVIDIA reports utilization of encode and decode engines separately and clock is merged

  // Utilization of the video encode engine (if supported)
  double encoder_utilization = 10;
  // Utilization of the video decode engine (if supported)
  double decoder_utilization = 11;
  // The clock of the video encode engine(s) (if supported)
  uint32 encoder_clock = 12;
  // The clock of the video decode engine(s) (if supported)
  uint32 decoder_clock = 13;

  // Power and temperatures
  uint32 power_milliwatt = 14;
  // Temperature of the GPU in degrees Celsius
  int32 temperature = 15;

  // Process information
  repeated GpuProcess processes = 16;
}
message GpuProcess {
  // Process ID
  uint32 pid = 1;
  // Total graphics utilization
  double graphics_utilization = 2;
  // VRAM allocated to the process
  uint64 memory_usage = 3;
  // Total video encode utilization (if supported)
  double encode_utilization = 4;
  // Total video decode utilization (if supported)
  double decode_utilization = 5;
}

// === Storage ===
message Storage {
  string name = 1; // The storage device's name
  string device_path = 2; // The storage device's /dev/* path
  uint64 capacity = 3;
  uint64 used = 4;
  uint64 read_bytes = 5;
  uint64 total_read = 6;
  uint64 write_bytes = 7;
  uint64 total_write = 8;
}

// === Network ===
message Network {
  string adapter_name = 1;
  uint64 received_bytes = 2;
  uint64 total_received = 3;
  uint64 sent_bytes = 4;
  uint64 total_sent = 5;
  string ipv4_address = 6;
  string ipv6_address = 7;
  double signal_strength_db = 8;
}

// === Process ===
message Process {
  string name = 1; // The registered process name
  string exe = 2; // The name of the executable
  string cmd = 3; // The command-line of the process
  string user = 4;
  uint32 pid = 5;
  double cpu_utilization = 6;
  uint64 mem_utilization = 7;
  double gpu_utilization = 8;
  uint64 storage_read = 9;
  uint64 storage_write = 10;
  int32 priority = 11;
  uint32 status = 12;
}
