syntax = "proto3";
package monitord;

import "google/protobuf/duration.proto";
import "metrics.proto";

service MonitordService {
  rpc StartReporting(stream ClientMessage) returns (stream MetricReport);
}

message ClientMessage {
  oneof payload {
    ConnectionRequest request = 1;
    ClientAck ack = 2;
  }
}
message ConnectionRequest {
  google.protobuf.Duration interval = 1;
  bool cpu_per_core = 2;
  bool gpu_processes = 3;
  repeated ProcessFilter process_filters = 4;
}
message ProcessFilter {
  oneof filter {
    string by_user = 1;
    PidRange by_pid = 2;
    string by_name_regex = 3;
    uint32 by_status = 4;
  }
}
message PidRange {
  uint32 lower_inclusive = 1;
  uint32 higher_exclusive = 2;
}
message ClientAck {
  bool processed = 1;
}

message MetricReport {
  repeated metrics.Cpu cpu = 1;
  metrics.Memory memory = 2;
  repeated metrics.Gpu gpus = 3;
  repeated metrics.Storage storages = 4;
  repeated metrics.Network networks = 5;
  map<uint32, metrics.Process> processes = 6;
}